--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.profiles.active=dev
 
 
 # elasticsearch
-spring.data.elasticsearch.cluster-name=my-application
+spring.data.elasticsearch.cluster-name=elasticsearch
 spring.data.elasticsearch.cluster-nodes=192.168.217.129:9300
 #spring.data.elasticsearch.local=false
 spring.data.elasticsearch.repositories.enable=true
@@ -24,4 +24,9 @@ spring.redis.host=192.168.217.129
 spring.redis.port=6379
 
 spring.cache.cache-names=liu
+
+spring.datasource.url=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
