--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8888
+#server.port=8080
 #logback 日志
 logging.config=classpath:logback-core.xml
 
@@ -25,7 +25,7 @@ spring.redis.port=6379
 
 spring.cache.cache-names=liu
 
-spring.datasource.url=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://192.168.217.129:3306/myblog?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
